found the bug in alignment, turns out there were set margins that prevented elements from being centered

--- a/src/components/Profile/components/PersonalInfoList/components/AlumniUpdateForm/Update.module.scss
+++ b/src/components/Profile/components/PersonalInfoList/components/AlumniUpdateForm/Update.module.scss
@@ -19,8 +19,8 @@
   }
 
   & :global(.MuiGrid-root) {
-    margin-left: 1em;
-    margin-right: 3em;
+    margin-left: 2em;
+    margin-right: 2em;
   }
 
   &_title {
